add Guard reload

--- a/.vuepress/theme/styles/index.styl
+++ b/.vuepress/theme/styles/index.styl
@@ -21,3 +21,7 @@
 .algolia-search-wrapper .algolia-autocomplete .ds-cursor .algolia-docsearch-suggestion--content {
   background-color: #ecd8de !important;
 }
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Fira Sans", "Droid Sans", Roboto, Oxygen, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
